--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
+    useLibrary 'org.apache.http.legacy'
+
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.alexl.stlzoo"
@@ -28,6 +30,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.google.android.gms:play-services:11.8.0'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.googlecode.json-simple:json-simple:1.1'
 }
 
 //apply plugin: 'com.google.gms.google-services'
