Calendar activity + xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,11 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:label="Dining Locations" >
         </activity>
+        <activity
+            android:name=".EventsActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label="Events" >
+        </activity>
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
